# dat490

./: BFRSS_Exploration.ipynb  CLAUDE.md  LATEST_BFRSS_Exploration_KB_Copy.ipynb  README.md  dev-tmux.sh  examination.ipynb  generate.py  mise.toml  parser.py  project_plan_output.ipynb  project_plan_output.md  pyproject.toml  requirements.txt
.github/workflows/: nuxtjs.yml
dat490/: __init__.py  bfrss.py  parser.py
doc/_nuxt/: BCXd5w8K.js  BLQYzPi3.js  BS_e4x0A.js  Bj3O5amT.js  Bx0_QUHu.js  BxKsf9Z2.js  C1axQPe2.js  C4TjRiuy.js  C7ruVGWe.js  D1zv8p-w.js  DOf0f2Rw.js  DeBAbjXn.js  DiytUhBW.js  SHG_YnXB.js  o1jLi9M9.js
docs/: 200.html  404.html  _payload.json  demographics_eda.md  eda.md  index.html  nuxt.md  tooling.md
docs/_nuxt/: 2ac2dE10.js  5EJ14pAe.js  5kBlz9tS.js  5liwh10G.js  7QpP2-fE.js  88opOQSr.js  8ps3HyTB.js  9IJX58H-.js  A0BDLqYi.js  B-U-12P5.js  B1SXn6IF.js  B1ccK-Ga.js  B254A8F5.js  B2kDW4DC.js  (+108 more)
metadata/: models.py  parser.py
notebooks/: BFRSS.ipynb  BFRSS_Exploration.ipynb  GENHLTH_Demographic_analysis.ipynb  LATEST_BFRSS_Exploration_KB_Copy.ipynb  RSQ2_ML_Prediction.ipynb  parquet_test.ipynb  project_plan_output.ipynb  rsq2 visualization.ipynb
scripts/: README.md  categorize_desc_columns.py  check_parquet_columns.py  compare_parquet_columns.py  demographic_analysis.py  examine_columns.py  fix_x_prefixes.py  generate.py  test.py  test_parquet_column_names.py
web/: app.vue  content.config.ts  dev-tmux.sh  mise.toml  nuxt.config.ts  package-lock.json  package.json
website/: .gitignore  README.md  app.vue  content.config.ts  nuxt.config.ts
(+325 files in other folders)
