[project]
name = "dat490"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.8.1"

